Fix buttons on mobile

--- a/src/scenes/home/informationForm/informationForm.css
+++ b/src/scenes/home/informationForm/informationForm.css
@@ -1,5 +1,6 @@
 .buttonContainer {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
